--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,7 @@
         <div id="schedule-10V-1" class="schedule">Расписание для 10В-1</div>
         <div id="schedule-10V-2" class="schedule">Расписание для 10В-2</div>
 
-        <script src="index.js"></script>
+        <script type="application/json" src="index.js"></script>
+
     </body>
 </html>
