--- a/public/clubs.html
+++ b/public/clubs.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FizTech School Clubs</title>
+    <link rel="stylesheet" href="clubs.css">
 </head>
 <body>
-    
+    <h1>PhysTech School Clubs</h1>
+    <h3>Чтобы вступить в группу клуба -> кликните на картинку</h3>
+    <div class = "club-cards">
+        <div class = "club-card"><club-card imgSrc = "../images/MPD.jpg" clubName = "MPD" aboutClub = "Создание совместных проектов, изучение доп. IT знаний"></club-card></div>
+        <div class = "club-card"><club-card imgSrc = "../images/TheCreatorsClub.jpg" clubName = "The Creators Club" aboutClub = "Обучение рисованию и совместное создание проектов,пополнение портфолио"></club-card></div>
+        <div class = "club-card"><club-card imgSrc = "../images/MUN.jpg" clubName = "MUN" aboutClub = "Развитие политической грамотности и ораторского мастерства. Также возможность, подтянуть уровень английского языка"></club-card></div>
+        <div class = "club-card"><club-card imgSrc = "../images/Chess.jpg" clubName = "Chess Club" aboutClub = "Совместная игра и обучение в шахматы"></club-card></div>
+        <div class = "club-card"><club-card imgSrc = "../images/debate.jpg" clubName = "Дебатный клуб" aboutClub = "Организация и участие в турнирах, проведение встреч и собраний с спикерами. Развитие ораторского искусства"></club-card></div>
+        <div class = "club-card"><club-card imgSrc = "../images/VolunteeringClub.jpg" clubName = "Volunteering Club" aboutClub = "Наш клуб занимается продвижением волонтерских проектов, волонтерской поддержкой внутри и внешкольных ивентов"></club-card></div>
+        <div class = "club-card"><club-card imgSrc = "../images/LBJ.jpg" clubName = "Лига Плохих Шуток" aboutClub = "Проводить КВН, юмористические шоу и т.п."></club-card></div>
+        <div class = "club-card"><club-card imgSrc = "../images/AgroClub.jpg" clubName = "Agro Club" aboutClub = "Выращивание зелени"></club-card></div>
+    </div>
 </body>
+    <script src="club-card.js"></script>
+    <script src="clubs.js"></script>
 </html>
