--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         </div>
         <div id="letter-buttons"></div>
         <div id="group-buttons"></div>
-        <h2 id="current-schedule">Расписание для:</h2>
+        <h2 id="current-schedule"></h2>
         <div id="schedule-5AE-1" class="schedule">
             <table>
                 <thead>
@@ -156,6 +156,6 @@
         <div id="schedule-10V-2" class="schedule">Расписание для 10В-2</div>
 
         <script type="application/json" src="index.js"></script>
-
+        <script src="schedule.js"></script>
     </body>
 </html>
