--- a/public/sample.html
+++ b/public/sample.html
@@ -1,129 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
-        }
-        button {
-            margin: 5px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Выбор класса</title>
 </head>
 <body>
-    <h1>Class Schedule</h1>
-    <div>
-        <button onclick="displaySchedule('AE', '5', '1')">AE Group 1</button>
-        <button onclick="displaySchedule('AE', '5', '2')">AE Group 2</button>
-        <button onclick="displaySchedule('А', '5', '1')">A Group 1</button>
-        <button onclick="displaySchedule('А', '5', '2')">A Group 2</button>
-    </div>
-    <div id="schedule"></div>
-    <div class = "club-card"><club-card imgSrc = "../images/MPD.jpg" clubName = "MPD" aboutClub = "Создание совместных проектов, изучение доп. IT знаний"></club-card></div>
-        <div class = "club-card"><club-card imgSrc = "../images/TheCreatorsClub.jpg" clubName = "The Creators Club" aboutClub = "Обучение рисованию и совместное создание проектов,пополнение портфолио"></club-card></div>
-        <div class = "club-card"><club-card imgSrc = "../images/MUN.jpg" clubName = "MUN" aboutClub = "Развитие политической грамотности и ораторского мастерства. Также возможность, подтянуть уровень английского языка"></club-card></div>
-        <div class = "club-card"><club-card imgSrc = "../images/Chess.jpg" clubName = "Chess Club" aboutClub = "Совместная игра и обучение в шахматы"></club-card></div>
-        <div class = "club-card"><club-card imgSrc = "../images/debate.jpg" clubName = "Дебатный клуб" aboutClub = "Организация и участие в турнирах, проведение встреч и собраний с спикерами. Развитие ораторского искусства"></club-card></div>
-        <div class = "club-card"><club-card imgSrc = "../images/VolunteeringClub.jpg" clubName = "Volunteering Club" aboutClub = "Наш клуб занимается продвижением волонтерских проектов, волонтерской поддержкой внутри и внешкольных ивентов"></club-card></div>
-        <div class = "club-card"><club-card imgSrc = "../images/LBJ.jpg" clubName = "Лига Плохих Шуток" aboutClub = "Проводить КВН, юмористические шоу и т.п."></club-card></div>
-        <div class = "club-card"><club-card imgSrc = "../images/AgroClub.jpg" clubName = "Agro Club" aboutClub = "Выращивание зелени"></club-card></div>
-    <script>
-        const data = {
-            "5": {
-                "AE": {
-                    "1": {
-                        "monday": ["Math", "Physics", "History", "Kazakh", "English"],
-                        "tuesday": ["Chemistry", "Math", "Inform", "Kazakh", "English"],
-                        "wednesday": ["Biology", "Math", "Inform", "Kazakh", "English"],
-                        "thursday": ["Math", "Geography", "Inform", "Kazakh", "English"],
-                        "friday": ["Math", "Physics", "Inform", "Kazakh", "Physical Education"],
-                        "saturday": ["Math", "Physics", "Inform", "Kazakh", "English"],
-                        "sunday": ["Math", "Physics", "Inform", "Kazakh", "English"]
-                    },
-                    "2": {
-                        "monday": ["Physics", "Chemistry", "Kazakh", "English", "Math"],
-                        "tuesday": ["Physics", "Inform", "Biology", "English", "Math"],
-                        "wednesday": ["Physics", "History", "Kazakh", "Math", "English"],
-                        "thursday": ["Physics", "Inform", "Kazakh", "Geography", "Math"],
-                        "friday": ["Physics", "Inform", "Chemistry", "English", "Math"],
-                        "saturday": ["Physics", "Inform", "Kazakh", "Math", "Physical Education"],
-                        "sunday": ["Physics", "Inform", "Kazakh", "Math", "English"]
-                    }
-                },
-                "А": {
-                    "1": {
-                        "monday": ["Math", "Physics", "Inform", "Kazakh", "English"],
-                        "tuesday": ["Math", "Physics", "Inform", "Kazakh", "English"],
-                        "wednesday": ["Math", "Physics", "Inform", "Kazakh", "English"],
-                        "thursday": ["Math", "Physics", "Inform", "Kazakh", "English"],
-                        "friday": ["Math", "Physics", "Inform", "Kazakh", "English"],
-                        "saturday": ["Math", "Physics", "Inform", "Kazakh", "English"],
-                        "sunday": ["Math", "Physics", "Inform", "Kazakh", "English"]
-                    },
-                    "2": {
-                        "monday": ["Physics", "Inform", "Kazakh", "English", "Math"],
-                        "tuesday": ["Physics", "Inform", "Kazakh", "English", "Math"],
-                        "wednesday": ["Physics", "Inform", "Kazakh", "English", "Math"],
-                        "thursday": ["Physics", "Inform", "Kazakh", "English", "Math"],
-                        "friday": ["Physics", "Inform", "Kazakh", "English", "Math"],
-                        "saturday": ["Physics", "Inform", "Kazakh", "English", "Math"],
-                        "sunday": ["Physics", "Inform", "Kazakh", "English", "Math"]
-                    }
-                }
-            }
-        };
 
-        const times = [
-            "8:00 - 8:40", "8:45 - 9:25", "9:35 - 10:15", "10:20 - 11:00", 
-            "11:15 - 11:55", "12:05 - 12:45", "12:50 - 13:30"
-        ];
+<script>
+    const data = {
+  "first": {
+    "5": { "AE": {}, "A": {}, "B": {}, "V": {}, "G": {}, "D": {}, "E": {}, "ZH": {} },
+    "6": { "K": {}, "M": {} },
+    "7": { "N": {}, "O": {}, "P": {} }
+  },
+  "second": {
+    "5": { "L": {}, "R": {}, "S": {} },
+    "6": { "T": {}, "U": {}, "F": {} },
+    "7": { "H": {}, "I": {}, "J": {} }
+  }
+};
 
-        function displaySchedule(classType, grade, group) {
-            const scheduleContainer = document.getElementById('schedule');
-            scheduleContainer.innerHTML = ''; // Clear previous content
+// Функция для объединения данных по классам для обеих смен
+function getCombinedClassLetters(data) {
+  const result = { first: {}, second: {} };
 
-            const classData = data[grade][classType][group];
-            const table = document.createElement('table');
-            const headerRow = document.createElement('tr');
+  // Обработаем обе смены отдельно
+  ["first", "second"].forEach(shift => {
+    let accumulatedLetters = [];
 
-            // Create header row with days of the week
-            const daysOfWeek = ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"];
-            headerRow.appendChild(document.createElement('th')); // Empty top-left cell
-            daysOfWeek.forEach(day => {
-                const th = document.createElement('th');
-                th.textContent = day.charAt(0).toUpperCase() + day.slice(1);
-                headerRow.appendChild(th);
-            });
-            table.appendChild(headerRow);
+    // Проходим по каждому классу в порядке возрастания
+    Object.keys(data[shift]).sort().forEach(classNum => {
+      // Получаем текущие буквы для класса и добавляем их к предыдущим
+      const currentLetters = Object.keys(data[shift][classNum]);
+      accumulatedLetters = [...accumulatedLetters, ...currentLetters];
+      
+      // Сохраняем в result массив букв без дубликатов для текущей смены и класса
+      result[shift][classNum] = [...new Set(accumulatedLetters)];
+    });
+  });
 
-            // Iterate through groups and create rows for each class period
-            for (let period = 0; period < times.length; period++) { // Use times array length for periods
-                const row = document.createElement('tr');
-                const periodCell = document.createElement('td');
-                periodCell.textContent = times[period]; // Display the time for each period
-                row.appendChild(periodCell);
+  return result;
+}
 
-                // Fill in subjects for each day
-                daysOfWeek.forEach(day => {
-                    const td = document.createElement('td');
-                    td.textContent = classData[day][period] || ""; // Prevents undefined error
-                    row.appendChild(td);
-                });
+// Вывод результата
+console.log(getCombinedClassLetters(data));
 
-                table.appendChild(row);
-            }
+</script>
 
-            scheduleContainer.appendChild(table);
-        }
-    </script>
 </body>
 </html>
