--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset = "UTF-8" />
+        <meta name = "viewport" content = "width=device-width, initial-scale=1.0" />
         <title>FizTech Schedule | Расписание ФизТеха</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel = "stylesheet" href = "styles.css" />
     </head>
     <body>
-        <div class="header-text">
+        <div class = "header-text">
             <h1>Fiztex Schedule</h1>
             <h2>Расписание занятий Физтеха</h2>
             <h2>Удобный просмотр расписания по дням и классам</h2>
         </div>
         <div>
-            <button class="class-button" data-class="5">5</button>
-            <button class="class-button" data-class="6">6</button>
-            <button class="class-button" data-class="7">7</button>
-            <button class="class-button" data-class="8">8</button>
-            <button class="class-button" data-class="9">9</button>
-            <button class="class-button" data-class="10">10</button>
+            <button class = "class-button" data-class = "5">5</button>
+            <button class = "class-button" data-class = "6">6</button>
+            <button class = "class-button" data-class = "7">7</button>
+            <button class = "class-button" data-class = "8">8</button>
+            <button class = "class-button" data-class = "9">9</button>
+            <button class = "class-button" data-class = "10">10</button>
         </div>
-        <div id="letter-buttons"></div>
-        <div id="group-buttons"></div>
-        <div id="current-schedule"></div>
-        <div id="schedule-table"></div>
-        <script src="schedule.js"></script>
+        <div id = "letter-buttons"></div>
+        <div id = "group-buttons"></div>
+        <div id = "current-schedule"></div>
+        <div id = "schedule-table"></div>
+        <script src = "schedule.js"></script>
+        <script src = "table-element.js"></script>
     </body>
 </html>
