--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
             <h2>Расписание занятий Физтеха</h2>
             <h2>Удобный просмотр расписания по дням и классам</h2>
         </div>
-        <div>
+        <hr class="main-line">
+        <div class="button class-buttons">
             <button class = "class-button" data-class = "5">5</button>
             <button class = "class-button" data-class = "6">6</button>
             <button class = "class-button" data-class = "7">7</button>
@@ -21,9 +22,9 @@
             <button class = "class-button" data-class = "9">9</button>
             <button class = "class-button" data-class = "10">10</button>
         </div>
-        <div id = "letter-buttons"></div>
-        <div id = "group-buttons"></div>
-        <div id = "current-schedule"></div>
+        <div id = "letter-buttons" class="button letter-buttons"></div>
+        <div id = "group-buttons" class="button group-buttons"></div>
+        <div id = "current-schedule" class="result-schedule"></div>
         <div id = "schedule-table"></div>
         
     </body>
