--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,42 @@
     </head>
     <body>
         <div class = "header-text">
-            <h1>Fiztex Schedule</h1>
-            <h2>Расписание занятий Физтеха</h2>
-            <h2>Удобный просмотр расписания по дням и классам</h2>
+            <h1>PhysTech School Schedule</h1>
+            <div class="menu hamburger">
+                <div class="item">
+                    <a href="#" class="link">
+                        <span>Наше меню</span>
+                        <svg viewBox="0 0 360 360" xml:space="preserve">
+                            <g id="SVGRepo_iconCarrier">
+                            <path
+                                id="XMLID_225_"
+                                d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393 c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393 s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z"
+                            ></path>
+                            </g>
+                        </svg>
+                    </a>
+                    <div class="submenu">
+                        <div class="submenu-item">
+                            <a href="main-page.html" class="submenu-link"> Главная страница </a>
+                        </div>
+                        <div class="submenu-item">
+                            <a href="index.html" class="submenu-link"> Расписание классов </a>
+                        </div>
+                        <div class="submenu-item">
+                            <a href="clubs.html" class="submenu-link"> Клубы школы </a>
+                        </div>
+                        <div class="submenu-item">
+                            <a href = "#" class="submenu-link" id = "theme-toggle">Сменить цвет фона</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="subtext">
+                <h2>Расписание занятий Физтеха</h2>
+                <h2>Удобный просмотр расписания по дням и классам</h2>
+            </div>
         </div>
-        <hr class="main-line">
+
         <div class="button class-buttons">
             <button class = "class-button" data-class = "5">5</button>
             <button class = "class-button" data-class = "6">6</button>
