--- a/public/clubs.html
+++ b/public/clubs.html
@@ -7,8 +7,41 @@
     <link rel="stylesheet" href="clubs.css">
 </head>
 <body>
-    <h1>PhysTech School Clubs</h1>
-    <h3>Чтобы вступить в группу клуба -> кликните на картинку</h3>
+    <div class = "header-text">
+        <h1>PhysTech School Clubs</h1>
+        <div class="menu hamburger">
+            <div class="item">
+                <a href="#" class="link">
+                    <span>Наше меню</span>
+                    <svg viewBox="0 0 360 360" xml:space="preserve">
+                        <g id="SVGRepo_iconCarrier">
+                        <path
+                            id="XMLID_225_"
+                            d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393 c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393 s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z"
+                        ></path>
+                        </g>
+                    </svg>
+                </a>
+                <div class="submenu">
+                    <div class="submenu-item">
+                        <a href="main-page.html" class="submenu-link"> Главная страница </a>
+                    </div>
+                    <div class="submenu-item">
+                        <a href="index.html" class="submenu-link"> Расписание классов </a>
+                    </div>
+                    <div class="submenu-item">
+                        <a href="clubs.html" class="submenu-link"> Клубы школы </a>
+                    </div>
+                    <div class="submenu-item">
+                        <a href = "#" class="submenu-link" id = "theme-toggle">Сменить цвет фона</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="subtext">
+            <h2>Чтобы вступить в группу клуба -> кликните на картинку</h2>
+        </div>
+    </div>
     <div class = "club-cards" id = "club-cards">
         
     </div>
